--- a/src/App.css
+++ b/src/App.css
@@ -2,53 +2,75 @@
     text-align: center;
 }
 
-.App-logo {
-    height: 40vmin;
-}
-
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
 }
 
-.App-link {
-    color: #09d3ac;
-}
 
 .input, .submit {
     display: block;
 }
 
-.projector {
-    position: absolute;
-    top: 50px;
-    left: 50px;
+
+.flex-container {
+    background-color: peachpuff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+    max-height: 900px;
+    width: 900px;
+}
+
+.flex-item {
+    border: 1px solid #282c34;
+    flex: 1 0 auto;
+    background: tomato;
+    min-width: 100px;
+    min-height: 100px;
+    width: 12.5%;
+    height: 10%;
 }
 
 
-.image-container {
+
+/*.projector {*/
+    /*background: #19f6e8;*/
+    /*position: absolute;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+/*}*/
+
+.sp{
+    font-size: 9px;
+    color: black;
+}
+
+/*.image-container {*/
     /*background: coral;*/
-    display: inline-block;
-    min-height: 200px;
-    min-width: 200px;
-}
+    /*border: black ;*/
+    /*border-style: solid;*/
+/*}*/
 
 /*ANIMATION*/
 ::selection {
     background: #19f6e8;
 }
+
 .svg-wrapper {
     position: absolute;
     margin: 0 auto;
     width: 100%;
     height: 100%;
 }
+
 .shape1,
 .shape2 {
     stroke-dasharray: 1120;
@@ -59,12 +81,15 @@
     transition-timing-function: linear;
     transition: stroke-dashoffset 10s, stroke-dasharray 10s;
 }
+
 .shape1 {
     stroke-dashoffset: 1120;
 }
+
 .shape2 {
     stroke-dashoffset: -1120;
 }
+
 .text {
     font-family: 'Roboto Condensed';
     font-size: 22px;
@@ -74,6 +99,7 @@
     top: -48px;
     position: relative;
 }
+
 .svg-wrapper:hover .shape1,
 .svg-wrapper:hover .shape2 {
     stroke-dashoffset: 0;
