--- a/src/App.css
+++ b/src/App.css
@@ -6,63 +6,64 @@
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
-    /*flex-direction: column;*/
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: white;
 }
 
-
 .input, .submit {
     display: block;
 }
+.projector{
+    background-image: url("./bg.png");
+    max-width: 1024px;
+    max-height: 768px;
+    /*min-width: 1024px;*/
+    /*min-height: 728px;*/
+}
+
 
 
 .flex-container {
-    background-color: peachpuff;
+    padding: 0;
+    margin: 0;
+    list-style: none;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    max-height: 900px;
-    width: 900px;
+    flex-wrap: wrap;
+}
+
+.projector-item {
+    width: 100%
 }
 
 .flex-item {
-    border: 1px solid #282c34;
-    flex: 1 0 auto;
-    background: tomato;
-    min-width: 100px;
-    min-height: 100px;
-    width: 12.5%;
-    height: 10%;
+    flex-grow: 1;
+    min-width: 12.5%;
+    margin-bottom: -0.6vh;
 }
 
 
+.hidden-flex-item {
+    content: "";
+    flex: 1 0 200px;
+    padding: 5px;
+    margin-top: 10px;
+    margin-right: 5px;
+    visibility: hidden;
+}
 
-/*.projector {*/
-    /*background: #19f6e8;*/
-    /*position: absolute;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-/*}*/
-
-.sp{
+.sp {
     font-size: 9px;
     color: black;
 }
-
-/*.image-container {*/
-    /*background: coral;*/
-    /*border: black ;*/
-    /*border-style: solid;*/
-/*}*/
 
 /*ANIMATION*/
 ::selection {
     background: #19f6e8;
 }
+
 
 .svg-wrapper {
     position: absolute;
@@ -81,6 +82,7 @@
     transition-timing-function: linear;
     transition: stroke-dashoffset 10s, stroke-dasharray 10s;
 }
+
 
 .shape1 {
     stroke-dashoffset: 1120;
