--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
     display: block;
 }
 .projector{
-    background-image: url("./bg.png");
+    background-image: url("./back.jpg");
     max-width: 1024px;
     max-height: 768px;
     /*min-width: 1024px;*/
@@ -35,15 +35,43 @@
 }
 
 .projector-item {
-    width: 100%
+    width: 100%;
+}
+
+.s48 .projector-item {
+    max-width: 128px
+}
+.s48 .flex-item {
+    min-width: 12.5%;
+}
+
+.s36 .projector-item {
+    max-width: 60px
+}
+.s36 .flex-item {
+    min-width: 8.3333%;
 }
 
 .flex-item {
     flex-grow: 1;
-    min-width: 12.5%;
     margin-bottom: -0.6vh;
 }
 
+.triangle{
+    max-width: 90px;
+    max-height: 90px;
+    position: absolute;
+}
+
+.credits{
+    margin-top: -50px;
+    color: rgba(255,255,255,0.3);
+    font-size: 12px;
+    bottom: -30px;
+    position: relative;
+    text-shadow: 0 0 3px #000000, 0 0 3px #000000;
+    padding-left: 4px;
+}
 
 .hidden-flex-item {
     content: "";
@@ -58,53 +86,3 @@
     font-size: 9px;
     color: black;
 }
-
-/*ANIMATION*/
-::selection {
-    background: #19f6e8;
-}
-
-
-.svg-wrapper {
-    position: absolute;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-}
-
-.shape1,
-.shape2 {
-    stroke-dasharray: 1120;
-    stroke-width: 10px;
-    fill: transparent;
-    stroke: #19f6e8;
-    border-bottom: 5px solid black;
-    transition-timing-function: linear;
-    transition: stroke-dashoffset 10s, stroke-dasharray 10s;
-}
-
-
-.shape1 {
-    stroke-dashoffset: 1120;
-}
-
-.shape2 {
-    stroke-dashoffset: -1120;
-}
-
-.text {
-    font-family: 'Roboto Condensed';
-    font-size: 22px;
-    line-height: 32px;
-    letter-spacing: 8px;
-    color: #fff;
-    top: -48px;
-    position: relative;
-}
-
-.svg-wrapper:hover .shape1,
-.svg-wrapper:hover .shape2 {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1120;
-}
-
