--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
     text-align: center;
 }
 
+
 .App-header {
     background-color: #282c34;
     min-height: 100vh;
@@ -65,7 +66,7 @@
 
 .credits{
     margin-top: -50px;
-    color: rgba(255,255,255,0.3);
+    color: rgba(255,255,255,0.5);
     font-size: 12px;
     bottom: -30px;
     position: relative;
@@ -85,4 +86,18 @@
 .sp {
     font-size: 9px;
     color: black;
+}
+.fullscreen{
+    display: block;
+    position: absolute;
+}
+
+@keyframes flickerAnimation {
+    0%   { opacity:0; }
+    50%  { opacity:1; }
+    100% { opacity:0; }
+}
+
+.animate-flicker {
+    animation: flickerAnimation 3s infinite;
 }
