--- a/src/App.css
+++ b/src/App.css
@@ -1,158 +1,164 @@
 .App {
-    text-align: center;
+  text-align: center;
 }
-
 
 .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.input, .submit {
-    display: block;
+.input,
+.submit {
+  display: block;
 }
 
 .projector {
-    background-image: url("./back.jpg");
-    max-width: 1024px;
-    max-height: 768px;
-    height: 768px;
-    width: 1024px;
+  background-image: url("./back.jpg");
+  max-width: 1024px;
+  max-height: 768px;
+  height: 768px;
+  width: 1024px;
 }
 
 .flex-container {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.new-item .new-item-holder {
-    opacity: 1;
-    top: -134px;
-    position: relative;
-    animation: 3s fadeIn infinite;
-    animation-delay: 4s;
+.new-item .projector-item {
+  animation: 3s fadeIn1 infinite;
 }
 
 .place-holder,
 .new-item-holder,
 .item-content {
-    max-width: 128px;
-    max-height: 128px;
+  max-width: 128px;
+  max-height: 128px;
 }
 
 .new-item-holder {
-    opacity: 0;
+  opacity: 0;
 }
 
 .projector-item {
-    width: 100%;
+  width: 100%;
 }
 
 .s48 .projector-item {
-    max-width: 128px
+  max-width: 128px;
 }
 
 .s48 .flex-item {
-    min-width: 12.5%;
+  min-width: 12.5%;
 }
 
 .s36 .projector-item {
-    max-width: 60px
+  max-width: 60px;
 }
 
 .s36 .flex-item {
-    min-width: 8.3333%;
+  min-width: 8.3333%;
 }
 
 .flex-item {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .triangle {
-    max-width: 90px;
-    max-height: 90px;
-    position: absolute;
+  max-width: 90px;
+  max-height: 90px;
+  position: absolute;
 }
 
 .credits {
-    margin-top: -50px;
-    color: rgba(255, 255, 255, 0.5);
-    font-size: 12px;
-    bottom: -30px;
-    position: relative;
-    text-shadow: 0 0 3px #000000, 0 0 3px #000000;
-    padding-left: 4px;
+  margin-top: -50px;
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 12px;
+  bottom: -30px;
+  position: relative;
+  text-shadow: 0 0 3px #000000, 0 0 3px #000000;
+  padding-left: 4px;
 }
 
 .placeHolder {
-    font-size: 18px;
-    max-width: 128px;
-    max-height: 128px;
-    height: 128px;
-    width: 128px;
+  font-size: 18px;
+  max-width: 128px;
+  max-height: 128px;
+  height: 128px;
+  width: 128px;
 }
 
 .new-item img {
-    box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .sp {
-    font-size: 9px;
-    color: black;
+  font-size: 9px;
+  color: black;
 }
 
 .fullscreen {
-    display: block;
-    position: absolute;
-    top: 0
+  display: block;
+  position: absolute;
+  top: 0;
 }
 
 @keyframes flickerAnimation {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0.4;
-    }
-    100% {
-        opacity: 0;
-    }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
-
+@keyframes fadeIn1 {
+  0% {
+    filter: sepia(0%);
+  }
+  50% {
+    filter: sepia(100%);
+  }
+  100% {
+    filter: sepia(0%);
+  }
+}
 @keyframes fadeIn {
-    0% {
-        opacity: 0.2;
-    }
-    50% {
-        opacity: 0.8
-    }
-    100% {
-        opacity: 0.2;
-    }
+  0% {
+    opacity: 0.2;
+  }
+  50% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0.2;
+  }
 }
 
 .animate-flicker {
-    animation: flickerAnimation 5s infinite;
+  animation: flickerAnimation 5s infinite;
 }
 
 .blink1 .animate-flicker {
-    animation: flickerAnimation 4s infinite;
+  animation: flickerAnimation 4s infinite;
 }
 
 .blink2 .animate-flicker {
-    animation: flickerAnimation 6s infinite;
+  animation: flickerAnimation 6s infinite;
 }
 
 .blink3 .animate-flicker {
-    animation: flickerAnimation 7s infinite;
+  animation: flickerAnimation 7s infinite;
 }
